--- a/emp_app/templates/index.html
+++ b/emp_app/templates/index.html
@@ -22,6 +22,8 @@
     <a class="btn btn-primary" href="/add_emp" role="button">ADD EMPLOYEE</a>
     <a class="btn btn-primary" href="/remove_emp" role="button">REMOVE EMPLOYEE</a>
     <a class="btn btn-primary" href="/filter_emp" role="button">FILTER EMPLOYEE</a>
+    <hr>
+    <p><a class="link-opacity-100" href="/">Logout</a></p>
 
   <!-- Content here -->
 </div>
