--- a/emp_app/templates/home.html
+++ b/emp_app/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Filter Employee details</title>
+    <title>SR TECH HOME PAGE</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 
 <!-- jQuery library -->
@@ -15,24 +15,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<div class="container">
-    <h1>Filter EMPLOYEE DETAILS</h1>
-    <hr>
-    <form action="/filter_emp" method="post">
+<form  method="post">
         {% csrf_token%}
-  <div class="mb-3">
+    <div class="container">
+    <h1>WELCOME TO SR TECH</h1>
+    <hr>
+    <a class="btn btn-primary" href="/login" role="button">LOGIN</a>
+    <a class="btn btn-primary" href="/register" role="button">REGISTER</a>
 
-    <label  class="form-label">DEPARTMENT</label>  
-    <input type="text" class="form-control" name="dept" value="{{dept}}"><br>
-
-
-    <label  class="form-label">ROLE</label>
-    <input type="text" class="form-control" name="role" value="{{role}}"><br>
-
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
   <!-- Content here -->
-</div>
+    </div>
+</form>
 </body>
 </html>
