--- a/emp_app/templates/register.html
+++ b/emp_app/templates/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Filter Employee details</title>
+    <title>Register</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 
 <!-- jQuery library -->
@@ -16,22 +16,28 @@
 </head>
 <body>
 <div class="container">
-    <h1>Filter EMPLOYEE DETAILS</h1>
+    <h1>REGISTER</h1>
     <hr>
-    <form action="/filter_emp" method="post">
+    <form action="/" method="post">
         {% csrf_token%}
   <div class="mb-3">
+    <label  class="form-label">Email</label>
+    <input type="text" class="form-control" name="email" value="{{email}}" ><br>
 
-    <label  class="form-label">DEPARTMENT</label>  
-    <input type="text" class="form-control" name="dept" value="{{dept}}"><br>
+    <label  class="form-label">password</label>
+    <input type="text" class="form-control" name="pass1" value="{{pass1}}">
 
+    <label  class="form-label">confirm password</label>
+    <input type="text" class="form-control" name="pass2" ><br>
 
-    <label  class="form-label">ROLE</label>
-    <input type="text" class="form-control" name="role" value="{{role}}"><br>
 
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Register</button>
 </form>
+
+    {% for messages in messages%}
+    <h3 style="color:red">{{messages}}</h3>>
+     {% endfor%}
   <!-- Content here -->
 </div>
 </body>
